[package]
name = "bevy_asteroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bevy = { version = "0.15.0", features = ["dynamic_linking", "wav"] }
noisy_bevy = "0.8"
itertools = "0.13.0"
avian2d = "0.2"
rand = "0.8"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
